updated env variables

--- a/back-end/.env
+++ b/back-end/.env
@@ -11,4 +11,6 @@ DB = tl_database
 MY_SECRET_KEY = 42
 JWT_SECRET = 42
 
+SSL_CERT = './cert/localhost-cert.pem'
+SSL_KEY = './cert/localhost-key.pem'
 NODE_EXTRA_CA_CERTS = './cert/localhost-cert.pem'
