--- a/back-end/.env
+++ b/back-end/.env
@@ -6,7 +6,7 @@ DB_HOST = 127.0.0.1
 DB_PORT = 3306
 DB_USER = root
 DB_PASS = root
-DB = tl_database
+DB = softeng
 
 MY_SECRET_KEY = 42
 JWT_SECRET = 42
