--- a/back-end/.env
+++ b/back-end/.env
@@ -10,7 +10,9 @@ DB_PORT = 3306
 DB_HOST = 127.0.0.1
 
 JWT_SECRET = 42
-MY_SECRET_KEY = 42
+
+LAN_HOSTNAME = 'Panos-MacBook-Pro.local' # for LAN
+HOST_IP = 192.168.1.228 # Change this to your IP
 
 SSL_CERT = './cert/localhost-cert.pem'
 SSL_KEY = './cert/localhost-key.pem'
