--- a/package.json
+++ b/package.json
@@ -3,6 +3,8 @@
     "bcrypt": "^5.1.1",
     "bcryptjs": "^2.4.3",
     "brcypt": "^1.0.1",
-    "jsonwebtoken": "^9.0.2"
+    "dotenv": "^16.4.7",
+    "jsonwebtoken": "^9.0.2",
+    "node-cron": "^3.0.3"
   }
 }
