--- a/.env
+++ b/.env
@@ -27,4 +27,4 @@ DB_HOST = 127.0.0.1
 # HTTPS CERTIFICATE
 SSL_CERT = './cert/selfsigned.crt'
 SSL_KEY = './cert/selfsigned.key'
-NODE_EXTRA_CA_CERTS = './cert/selfsigned.crt'
+NODE_EXTRA_CA_CERTS = '../back-end/cert/selfsigned.crt'
