--- a/.env
+++ b/.env
@@ -27,4 +27,5 @@ DB_HOST = 127.0.0.1
 # HTTPS CERTIFICATE
 SSL_CERT = './cert/selfsigned.crt'
 SSL_KEY = './cert/selfsigned.key'
+CLI_SSL_CERT = '../back-end/cert/selfsigned.crt' # for cli client
 NODE_EXTRA_CA_CERTS = '../back-end/cert/selfsigned.crt'
