--- a/.env
+++ b/.env
@@ -3,21 +3,15 @@ HTTP_PORT = 9114
 HTTPS_PORT = 9115
 FRONTEND_PORT = 9000
 
+HOST = localhost # Change to your IP for LAN access
 LAN_HOSTNAME = 'Panos-MacBook-Pro.local' # for LAN
-HOST_IP = 192.168.2.5 # Change this to your IP
-
 
 JWT_SECRET = 42
 
 # VITE - FRONTEND
 VITE_PORT=9000
-VITE_HOST=localhost
-VITE_HOST_IP=192.168.2.5
-#VITE_API_URL=https://192.168.1.228:9115
-VITE_API_URL=https://192.168.2.5:9115
-# For LAN access, you can change the line below: (from hostname)
-#VITE_API_URL=https://Panos-MacBook-Pro.local:9115
-#VITE_HOST='Panos-Macbook-Pro.local'
+VITE_HOST=localhost                     # Change to your IP for LAN access
+VITE_API_URL=https://localhost:9115     # Change to your IP for LAN access
 
 # DATABASE
 DB = softeng
