--- a/cli-client/package.json
+++ b/cli-client/package.json
@@ -14,9 +14,17 @@
   "license": "ISC",
   "dependencies": {
     "axios": "^1.7.9",
+    "bcrypt": "^5.1.1",
+    "chai": "^5.1.2",
+    "child_process": "^1.0.2",
     "commander": "^13.1.0",
+    "dotenv": "^16.4.7",
+    "esm": "^3.2.25",
     "fs": "^0.0.1-security",
     "jsonwebtoken": "^9.0.2",
-    "path": "^0.12.7"
+    "mocha": "^11.1.0",
+    "mysql2": "^3.12.0",
+    "path": "^0.12.7",
+    "util": "^0.12.5"
   }
 }
