--- a/back-end/cert/openssl.conf
+++ b/back-end/cert/openssl.conf
@@ -4,11 +4,11 @@ x509_extensions = v3_req
 prompt = no
 
 [req_distinguished_name]
-CN = easypass.test # You can put a domain or an IP here, but SAN is preferred
+CN = localhost  # Change this from easypass.test to localhost
 
 [v3_req]
 subjectAltName = @alt_names
 
 [alt_names]
-IP.1 = 192.168.1.128
-IP.2 = 192.168.1.228
+DNS.1 = localhost  # Add localhost as a DNS entry
+IP.1 = 127.0.0.1   # Ensure localhost is included as an IP
