--- a/back-end/package.json
+++ b/back-end/package.json
@@ -19,6 +19,7 @@
     "csv-parser": "^3.2.0",
     "dotenv": "^16.4.7",
     "express": "^4.21.2",
+    "json2csv": "^6.0.0-alpha.2",
     "jsonwebtoken": "^9.0.2",
     "mysql2": "^3.12.0",
     "node-cron": "^3.0.3"
