--- a/back-end/package.json
+++ b/back-end/package.json
@@ -22,7 +22,8 @@
     "json2csv": "^6.0.0-alpha.2",
     "jsonwebtoken": "^9.0.2",
     "mysql2": "^3.12.0",
-    "node-cron": "^3.0.3"
+    "node-cron": "^3.0.3",
+    "supertest": "^7.0.0"
   },
   "devDependencies": {
     "nodemon": "^3.1.9"
