moved scripts to /deployment

--- a/back-end/cert/openssl.conf
+++ b/back-end/cert/openssl.conf
@@ -4,11 +4,11 @@ x509_extensions = v3_req
 prompt = no
 
 [req_distinguished_name]
-CN = localhost  # Change this from easypass.test to localhost
+CN = localhost 
 
 [v3_req]
 subjectAltName = @alt_names
 
 [alt_names]
-DNS.1 = localhost  # Add localhost as a DNS entry
-IP.1 = 127.0.0.1   # Ensure localhost is included as an IP
+DNS.1 = localhost
+IP.1 = 127.0.0.1
